pc - full front end testing coverage, including mutation coverage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,6 @@ server.compression.enabled=false
 spring.data.mongodb.uri=${MONGODB_URI:${env.MONGODB_URI:mongodb+srv://fakeUsername:fakePassword@cluster0.ulqcw.mongodb.net/fakeDatabase?retryWrites=true&w=majority}}
 
 spring.mvc.format.date-time=iso
+
+app.startQtrYYYYQ=${START_QTR:${env.START_QTR:20221}}
+app.endQtrYYYYQ=${END_QTR:${env.END_QTR:20222}}
