--- a/.github/workflows/02-publish-docs-to-github-pages-qa.yml
+++ b/.github/workflows/02-publish-docs-to-github-pages-qa.yml
@@ -1,5 +1,6 @@
 
-name: 00 Publish 01 docs (Storybook) to GitHub Pages QA
+name: "02-publish-docs-to-github-pages-qa: Publish QA Storybook to GitHub Pages"
+
 on: 
   workflow_dispatch:
   pull_request:
@@ -10,11 +11,18 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
+    strategy:
+      matrix:
+        node-version: [16.x]
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
       - name: Figure out Branch name
         run: | 
           GITHUB_HEAD_REF="${GITHUB_HEAD_REF}"
