--- a/.github/workflows/32-frontend-coverage.yml
+++ b/.github/workflows/32-frontend-coverage.yml
@@ -1,4 +1,4 @@
-name: 02 Frontend 03 Mutation Testing (JavaScript/Stryker, testing the test suite)
+name: "32-frontend-coverage: Frontend Coverage (JavaScript/Jest)"
 
 on:
   workflow_dispatch:
@@ -10,11 +10,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 40
+    timeout-minutes: 10
 
     strategy:
       matrix:
-        node-version: [17.x]
+        node-version: [16.x]
     steps:
       - uses: actions/checkout@v2
         with: 
@@ -25,5 +25,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
         working-directory: ./frontend
-      - run: npx stryker run
+      - run: npm run coverage
         working-directory: ./frontend
+      - name: Upload to Codecov
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        run: bash <(curl -s https://codecov.io/bash)
+        working-directory: ./frontend
+     
