--- a/.github/workflows/40-check-production-build.yml
+++ b/.github/workflows/40-check-production-build.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: 01 Backend 03 Mutation Testing (Pitest)
+name: "40-check-production-build: Check Production Build (if this fails, deploying to Heroku will fail)"
 
 on:
   workflow_dispatch:
@@ -26,11 +26,7 @@ jobs:
     - name: Build with Maven
       env:
         TEST_PROPERTIES: ${{ secrets.TEST_PROPERTIES }}
-      run: mvn -B test 
-    - name: Pitest
-      run: mvn test org.pitest:pitest-maven:mutationCoverage
-    - name: Upload Pitest to Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: pitest-mutation-testing
-        path: target/pit-reports/* 
+        PRODUCTION: true
+      run: mvn -DskipTests clean dependency:list install
+
+  
