--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -32,6 +32,7 @@
                 "argsIgnorePattern": "^_",
                 "ignoreRestSiblings": true
             }
-        ]
+        ],
+        "testing-library/no-node-access": ["off"]
     }
 }
