Add debugging output to job

--- a/.github/workflows/00-publish-docs-to-github-pages-setup.yml
+++ b/.github/workflows/00-publish-docs-to-github-pages-setup.yml
@@ -18,7 +18,8 @@ jobs:
           TEMPLATE="https://github.com/${OWNER}/TEMPLATE-docs"
           REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
           HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
-          NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}        
+          NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}      
+          echo "Trying to create ${NEW_REPO} if it doesn't already exist"
           gh repo create ${NEW_REPO} --public --description "${DESC}" --template ${TEMPLATE}
         env:
           GITHUB_TOKEN: ${{ secrets.DOCS_TOKEN }}
@@ -31,6 +32,7 @@ jobs:
           REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
           HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
           NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}
+          echo "Trying to set HOMEPAGE=${HOMEPAGE} on NEW_REPO=${NEW_REPO}"
           gh repo edit ${NEW_REPO} --homepage ${HOMEPAGE}
         env:
           GITHUB_TOKEN: ${{ secrets.DOCS_TOKEN }}
@@ -45,7 +47,8 @@ jobs:
           OWNER_PLUS_REPOSITORY=${{github.repository}}
           REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
           HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
-          NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}        
+          NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}
+          echo "Trying to create ${NEW_REPO} if it doesn't already exist"
           gh repo create ${NEW_REPO} --public --description "${DESC}" --template ${TEMPLATE}
         env:
           GITHUB_TOKEN: ${{ secrets.DOCS_TOKEN }}
@@ -59,6 +62,7 @@ jobs:
           REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
           HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
           NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}
+          echo "Trying to set HOMEPAGE=${HOMEPAGE} on NEW_REPO=${NEW_REPO}"
           gh repo edit ${NEW_REPO} --homepage ${HOMEPAGE}
         env:
           GITHUB_TOKEN: ${{ secrets.DOCS_TOKEN }}
