pc - add backend for async job system
This adds the ability to submit asynchronous jobs in the backend,
including one demonstration test job.  Tests are included as well.

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,13 @@
             <version>2.0.1.Final</version>
         </dependency>
 
+          <!-- To help with testing async jobs; see http://www.awaitility.org/ https://stackoverflow.com/a/46227996 -->
+          <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>4.2.0</version>
+          </dependency>
+
     </dependencies>
 
     <build>
