pc - remove coverageThreshold on pitest, since it doesn't respect excluded classes

--- a/.github/workflows/14-backend-pitest.yml
+++ b/.github/workflows/14-backend-pitest.yml
@@ -26,7 +26,7 @@ jobs:
         TEST_PROPERTIES: ${{ secrets.TEST_PROPERTIES }}
       run: mvn -B test 
     - name: Pitest
-      run: mvn org.pitest:pitest-maven:mutationCoverage -DmutationThreshold=100 -DcoverageThreshold=100
+      run: mvn org.pitest:pitest-maven:mutationCoverage -DmutationThreshold=100 
     - name: Upload Pitest to Artifacts
       if: always() # always upload artifacts, even on failure
       uses: actions/upload-artifact@v2
