--- a/pom.xml
+++ b/pom.xml
@@ -106,8 +106,13 @@
             <artifactId>javax.json-api</artifactId>
             <version>1.1.4</version>
         </dependency>
-	  
-
+	<!-- https://mvnrepository.com/artifact/org.glassfish/javax.json -->
+	<dependency>
+	  <groupId>org.glassfish</groupId>
+	  <artifactId>javax.json</artifactId>
+	  <version>1.1.4</version>
+	</dependency>
+	
     </dependencies>
 
     <build>
