--- a/.github/workflows/10-backend-unit.yml
+++ b/.github/workflows/10-backend-unit.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
   pull_request:
   push:
-    branches: [ main ]
-
+  - branches: [ main ]
+  - paths: [src/**, pom.xml, lombok.config]
 jobs:
   build:
     runs-on: ubuntu-latest
