--- a/.github/workflows/14-backend-pitest.yml
+++ b/.github/workflows/14-backend-pitest.yml
@@ -7,7 +7,8 @@ on:
   workflow_dispatch:
   pull_request:
   push:
-    branches: [ main ]
+  - branches: [ main ]
+  - paths: [src/**, pom.xml, lombok.config]
 
 jobs:
   build:
