pc - update workflows to S23 standard

--- a/.github/workflows/12-backend-jacoco.yml
+++ b/.github/workflows/12-backend-jacoco.yml
@@ -5,9 +5,16 @@ name: "12-backend-jacoco: Java Test Coverage (Jacoco)"
 
 on:
   workflow_dispatch:
-  pull_request:
   push:
     branches: [ main ]
+    paths:
+      - 'src/**'
+      - 'pom.xml'
+  pull_request:
+    branches: [ main ]
+    paths:
+      - 'src/**'
+      - 'pom.xml'
 
 jobs:
   build:
