--- a/.github/workflows/30-frontend-tests.yml
+++ b/.github/workflows/30-frontend-tests.yml
@@ -3,9 +3,15 @@ name: "30-frontend-tests: JavaScript, Jest Unit tests"
 on:
   workflow_dispatch:
   pull_request:
+    branches:
+      - main
+    paths:
+      - 'frontend/**'
   push:
     branches:
       - main
+    paths:
+      - 'frontend/**'
 
 jobs:
   build:
