--- a/.github/workflows/32-frontend-coverage.yml
+++ b/.github/workflows/32-frontend-coverage.yml
@@ -3,10 +3,16 @@ name: "32-frontend-coverage: Frontend Coverage (JavaScript/Jest)"
 on:
   workflow_dispatch:
   pull_request:
+    branches:
+      - main
+    paths:
+      - 'frontend/**'
   push:
     branches:
       - main
-
+    paths:
+      - 'frontend/**'
+      
 jobs:
   build:
     runs-on: ubuntu-latest
