--- a/.github/workflows/34-frontend-mutation-testing.yml
+++ b/.github/workflows/34-frontend-mutation-testing.yml
@@ -3,9 +3,15 @@ name: "34-frontend-mutation-testing: Stryker JS Mutation Testing (JavaScript/Jes
 on:
   workflow_dispatch:
   pull_request:
+    branches:
+      - main
+    paths:
+      - 'frontend/**'
   push:
     branches:
       - main
+    paths:
+      - 'frontend/**'
 
 jobs:
   build:
