--- a/.github/workflows/30-frontend-tests.yml
+++ b/.github/workflows/30-frontend-tests.yml
@@ -3,32 +3,30 @@ name: "30-frontend-tests: JavaScript, Jest Unit tests"
 on:
   workflow_dispatch:
   pull_request:
-    branches:
-      - main
-    paths:
-      - 'frontend/**'
+    paths: [frontend/**]
   push:
-    branches:
-      - main
-    paths:
-      - 'frontend/**'
+    branches: [main]
+    paths: [frontend/**]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
-    strategy:
-      matrix:
-        node-version: [16.x]
     steps:
-      - uses: actions/checkout@v2
+      - uses: szenius/set-timezone@v1.2
+        with:
+          timezoneLinux: "America/Los_Angeles"
+      - uses: actions/checkout@v3.5.2
         with: 
           fetch-depth: 2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v3.6.0
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version-file: 'frontend/package.json'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
       - run: npm ci
         working-directory: ./frontend
       - run: npm test
