--- a/.github/workflows/13-backend-incremental-pitest.yml
+++ b/.github/workflows/13-backend-incremental-pitest.yml
@@ -37,6 +37,7 @@ jobs:
           echo "branch_name=${BRANCH}" >> "$GITHUB_ENV"    
     - name: Download artifact
       id: download-artifact
+      continue-on-error: true
       uses: dawidd6/action-download-artifact@v2.27.0
       with:
         github_token: ${{secrets.GITHUB_TOKEN}}
