--- a/.github/workflows/33-frontend-pr-mutation-testing.yml
+++ b/.github/workflows/33-frontend-pr-mutation-testing.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 40
+    timeout-minutes: 60
     env:
       destination: frontend/reports/mutation
 
@@ -52,6 +52,7 @@ jobs:
 
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2.27.0
+        continue-on-error: true
         with:
           workflow: 02-gh-pages-rebuild-part-1.yml
           github_token: ${{secrets.GITHUB_TOKEN}}
