--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,23 +40,27 @@
     "@testing-library/react-hooks": "^5.1.2",
     "axios-mock-adapter": "^1.19.0",
     "env-cmd": "^10.1.0",
-    "eslint": "^8.15.0",
+    "eslint": "^8.14.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.2.1-rc.0-next-64223fed8-20220210",
     "jest-mock-console": "^1.1.0",
-    "react-test-renderer": "^17.0.2",
-    "storybook-addon-mock": "^3.2.0"
+    "react-test-renderer": "^17.0.2"
   },
   "scripts": {
-    "start": "env-cmd -f ../.env -e development react-scripts start",
+    "start": "env-cmd -f ../.env  -e development react-scripts start",
     "build": "env-cmd -f ../.env --silent react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --coverage --watchAll=false",
     "storybook": "start-storybook --docs -p 6006 -s public",
     "build-storybook": "build-storybook --docs -s public"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
