--- a/.github/workflows/14-backend-pitest.yml
+++ b/.github/workflows/14-backend-pitest.yml
@@ -16,18 +16,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3.5.2
-    - name: Figure out branch name
-      id: get-branch-name
-      run: | 
-          GITHUB_HEAD_REF="${GITHUB_HEAD_REF}"
-          echo GITHUB_HEAD_REF=${GITHUB_HEAD_REF}
-          GITHUB_REF_CLEANED=${GITHUB_REF/refs\/heads\//}
-          echo GITHUB_REF_CLEANED=${GITHUB_REF_CLEANED}
-          GITHUB_REF_CLEANED=${GITHUB_REF_CLEANED//\//-}
-          echo GITHUB_REF_CLEANED=${GITHUB_REF_CLEANED}
-          BRANCH="${GITHUB_HEAD_REF:-${GITHUB_REF_CLEANED}}"
-          echo "branch_name=${BRANCH}"
-          echo "branch_name=${BRANCH}" >> "$GITHUB_ENV"    
     - name: Set up Java (version from .java-version file)
       uses: actions/setup-java@v3
       with:
@@ -46,7 +34,7 @@ jobs:
       if: always() # always upload artifacts, even if tests fail
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: pitest-${{env.branch_name}}-history.bin
+        name: pitest-main-history.bin
         path: target/pit-history/history.bin
     - name: Upload Pitest to Artifacts
       if: always() # always upload artifacts, even if tests fail
@@ -54,29 +42,6 @@ jobs:
       with:
         name: pitest
         path: target/pit-reports/* 
-
-    - name: Get PR number
-      id: get-pr-num
-      run: |
-        echo "GITHUB_EVENT_PATH=${GITHUB_EVENT_PATH}"
-        pr_number=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
-        echo "pr_number=${pr_number}" 
-        echo "pr_number=${pr_number}" >> "$GITHUB_ENV"
-
-    - name: Set path for github pages deploy when there is a PR num
-      if: ${{ env.pr_number != 'null' }}
-      run: |
-        prefix="prs/${pr_number}/"
-        echo "prefix=${prefix}"
-        echo "prefix=${prefix}" >> "$GITHUB_ENV"
-    
-    - name: Set path for github pages deploy when there is NOT a PR num
-      if: ${{ env.pr_number == 'null' }}
-      run: |
-        prefix=""
-        echo "prefix=${prefix}"
-        echo "prefix=${prefix}" >> "$GITHUB_ENV"
-
     - name: Deploy 🚀
       if: always() # always upload artifacts, even if tests fail
       uses: JamesIves/github-pages-deploy-action@v4
@@ -84,4 +49,4 @@ jobs:
         branch: gh-pages # The branch the action should deploy to.
         folder: target/pit-reports # The folder where the files we want to publish are located
         clean: true # Automatically remove deleted files from the deploy branch
-        target-folder: ${{env.prefix}}pitest # The folder that we serve our files from
+        target-folder: pitest # The folder that we serve our files from
