--- a/.github/workflows/13-backend-incremental-pitest.yml
+++ b/.github/workflows/13-backend-incremental-pitest.yml
@@ -23,6 +23,13 @@ jobs:
       with:
          distribution: semeru # See: https://github.com/actions/setup-java#supported-distributions
          java-version-file: ./.java-version
+    - name: Get PR number
+      id: get-pr-num
+      run: |
+        echo "GITHUB_EVENT_PATH=${GITHUB_EVENT_PATH}"
+        pr_number=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
+        echo "pr_number=${pr_number}" 
+        echo "pr_number=${pr_number}" >> "$GITHUB_ENV"
     - name: Figure out branch name
       id: get-branch-name
       run: | 
@@ -42,7 +49,7 @@ jobs:
       with:
         github_token: ${{secrets.GITHUB_TOKEN}}
         branch: ${{ env.branch_name }}
-        name: pitest-${{env.branch_name}}-history.bin
+        name: pitest-${{env.pr_number}}-history.bin
         path: target/pit-history
         check_artifacts: true
         if_no_artifact_found: warn
@@ -69,13 +76,6 @@ jobs:
         name: pitest
         path: target/pit-reports/* 
 
-    - name: Get PR number
-      id: get-pr-num
-      run: |
-        echo "GITHUB_EVENT_PATH=${GITHUB_EVENT_PATH}"
-        pr_number=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
-        echo "pr_number=${pr_number}" 
-        echo "pr_number=${pr_number}" >> "$GITHUB_ENV"
 
     - name: Set path for github pages deploy when there is a PR num
       if: ${{ env.pr_number != 'null' }}
