--- a/.github/workflows/13-backend-incremental-pitest.yml
+++ b/.github/workflows/13-backend-incremental-pitest.yml
@@ -67,7 +67,7 @@ jobs:
       if: always() # always upload artifacts, even if tests fail
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: pitest-${{env.branch_name}}-history.bin
+        name: pitest-${{env.pr_number}}-history.bin
         path: target/pit-history/history.bin
     - name: Upload Pitest Report to Artifacts
       if: always() # always upload artifacts, even if tests fail
