--- a/.github/workflows/12-backend-jacoco.yml
+++ b/.github/workflows/12-backend-jacoco.yml
@@ -37,7 +37,7 @@ jobs:
         echo "pr_number=${pr_number}" >> "$GITHUB_ENV"   
 
     - name: Build with Maven
-      run: mvn -B test jacoco:report verify
+      run: mvn -B -Dgcf.skip test jacoco:report verify
 
     - name: Set path for github pages deploy when there is a PR num
       if: always() # always upload artifacts, even if tests fail
