--- a/pom.xml
+++ b/pom.xml
@@ -365,6 +365,36 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <!--IMPLEMENTED: added plugin for maven dependencies, execution steps, and configurations-->
+                    <plugin>
+                        <groupId>pl.project13.maven</groupId>
+                        <artifactId>git-commit-id-plugin</artifactId>
+                        <version>2.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>get-the-git-infos</id>
+                                <goals>
+                                    <goal>revision</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>validate-the-git-infos</id>
+                                <goals>
+                                    <goal>validateRevision</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <generateGitPropertiesFile>true</generateGitPropertiesFile>
+                            <!--CONFIGURATIONS: include or exclude specific information -->
+                            <!-- <includeOnlyProperties>    
+                                <includeOnlyProperty>git.commit.id</includeOnlyProperty>
+                            </includeOnlyProperties> -->
+                            <!-- <excludeProperties>
+                                <excludeProperty>git.user.*</excludeProperty>
+                            </excludeProperties> -->
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
