changing pom.xml configs to test bugfixing

--- a/pom.xml
+++ b/pom.xml
@@ -290,6 +290,10 @@
                 <configuration>
                     <generateGitPropertiesFile>true</generateGitPropertiesFile>
                     <failOnNoGitDirectory>false</failOnNoGitDirectory>
+                    <!--DEBUGGING: -->
+                    <verbose>false</verbose>
+                    <useNativeGit>true</useNativeGit>
+                    <!-- similar bug: https://github.com/git-commit-id/git-commit-id-maven-plugin/issues/463 -->
                     <dotGitDirectory> /var/lib/jenkins/gitcache/proj-courses-f23-7pm-2.git</dotGitDirectory>
                     <!--CONFIGURATIONS: include or exclude specific information -->
                     <!-- <includeOnlyProperties>    
