Update CODEOWNERS for w24

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @pconrad @jingpeng7527 @andrewpengucsb @GlassBricks @sangitakunapuli @LeonFeng0325 @briggsrrr
+* @scottpchow23 @andrewpengucsb @AnikaArora @sangitakunapuli @tallyhawley @Aasish-Virjala @whuang602
