--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:${DATABASE_URL}
+spring.datasource.url=${DATABASE_URL/postgres:/jdbc:postgresql:}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
