--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @scottpchow23 @andrewpengucsb @AnikaArora @sangitakunapuli @tallyhawley @Aasish-Virjala @whuang602
+* @pconrad @Aasish-Virjala @andrewpengucsb @AnikaArora @sangitakunapuli @sanilkatula @whuang602
