pc/sk - add environment variable for SHOW_SWAGGER_UI_LINK

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -10,3 +10,7 @@ app.showSwaggerUILink=true
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.initialization-mode=always
+
+
+
+app.showSwaggerUILink=${SHOW_SWAGGER_UI_LINK:${env.SHOW_SWAGGER_UI_LINK:true}}
