pc - fix h2-console, reduce log output, reduce job log output

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -1,4 +1,9 @@
-logging.level.sql=DEBUG
+
+# Change any of these see more or less information  
+# levels are TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
+logging.level.root=TRACE
+logging.level.sql=TRACE
+
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.datasource.url=jdbc:h2:file:./target/db-development
 spring.datasource.username=sa
