pc - update to node 20

--- a/.env.SAMPLE
+++ b/.env.SAMPLE
@@ -6,3 +6,5 @@ START_QTR=20221
 END_QTR=20222
 UCSB_API_KEY=see-instructions-in-readme
 COURSE_DATA_STALE_THRESHOLD_MINUTES=1440
+
+CHROMATIC_PROJECT_TOKEN=get_value_from_chromatic_dot_com_dashboard
